removing guava dependencies
Signed-off-by: Samuel Herman <sherman8915@gmail.com>