@@ -21,9 +21,6 @@ import org.opensearch.rest.BaseRestHandler;
 import org.opensearch.rest.RestRequest;
 import org.opensearch.rest.action.RestToXContentListener;
 
-import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
-
 public class RestMLRegisterAgentAction extends BaseRestHandler {
     private static final String ML_REGISTER_AGENT_ACTION = "ml_register_agent_action";
 
@@ -39,7 +36,7 @@ public class RestMLRegisterAgentAction extends BaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return ImmutableList.of(new Route(RestRequest.Method.POST, String.format(Locale.ROOT, "%s/agents/_register", ML_BASE_URI)));
+        return List.of(new Route(RestRequest.Method.POST, String.format(Locale.ROOT, "%s/agents/_register", ML_BASE_URI)));
     }
 
     @Override
@@ -54,7 +51,7 @@ public class RestMLRegisterAgentAction extends BaseRestHandler {
      * @param request RestRequest
      * @return MLTrainingTaskRequest
      */
-    @VisibleForTesting
+    // VisibleForTesting
     MLRegisterAgentRequest getRequest(RestRequest request) throws IOException {
         XContentParser parser = request.contentParser();
         ensureExpectedToken(XContentParser.Token.START_OBJECT, parser.nextToken(), parser);
