@@ -8,10 +8,10 @@ package org.opensearch.ml.rest;
 import static org.opensearch.ml.common.CommonValue.ML_MODEL_INDEX;
 import static org.opensearch.ml.plugin.MachineLearningPlugin.ML_BASE_URI;
 
+import java.util.List;
+
 import org.opensearch.ml.common.MLModel;
 import org.opensearch.ml.common.transport.model.MLModelSearchAction;
-
-import com.google.common.collect.ImmutableList;
 
 /**
  * This class consists of the REST handler to search ML Models.
@@ -21,7 +21,7 @@ public class RestMLSearchModelAction extends AbstractMLSearchAction<MLModel> {
     private static final String SEARCH_MODEL_PATH = ML_BASE_URI + "/models/_search";
 
     public RestMLSearchModelAction() {
-        super(ImmutableList.of(SEARCH_MODEL_PATH), ML_MODEL_INDEX, MLModel.class, MLModelSearchAction.INSTANCE);
+        super(List.of(SEARCH_MODEL_PATH), ML_MODEL_INDEX, MLModel.class, MLModelSearchAction.INSTANCE);
     }
 
     @Override
