@@ -8,10 +8,10 @@ package org.opensearch.ml.rest;
 import static org.opensearch.ml.common.CommonValue.ML_MODEL_GROUP_INDEX;
 import static org.opensearch.ml.plugin.MachineLearningPlugin.ML_BASE_URI;
 
+import java.util.List;
+
 import org.opensearch.ml.common.MLModelGroup;
 import org.opensearch.ml.common.transport.model_group.MLModelGroupSearchAction;
-
-import com.google.common.collect.ImmutableList;
 
 /**
  * This class consists of the REST handler to search ML Models.
@@ -21,7 +21,7 @@ public class RestMLSearchModelGroupAction extends AbstractMLSearchAction<MLModel
     private static final String SEARCH_MODEL_GROUP_PATH = ML_BASE_URI + "/model_groups/_search";
 
     public RestMLSearchModelGroupAction() {
-        super(ImmutableList.of(SEARCH_MODEL_GROUP_PATH), ML_MODEL_GROUP_INDEX, MLModelGroup.class, MLModelGroupSearchAction.INSTANCE);
+        super(List.of(SEARCH_MODEL_GROUP_PATH), ML_MODEL_GROUP_INDEX, MLModelGroup.class, MLModelGroupSearchAction.INSTANCE);
     }
 
     @Override
