@@ -8,6 +8,7 @@ package org.opensearch.ml.task;
 import static org.opensearch.ml.plugin.MachineLearningPlugin.TRAIN_THREAD_POOL;
 
 import java.time.Instant;
+import java.util.List;
 import java.util.UUID;
 
 import org.opensearch.action.ActionListenerResponseHandler;
@@ -36,8 +37,6 @@ import org.opensearch.ml.stats.MLNodeLevelStat;
 import org.opensearch.ml.stats.MLStats;
 import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.TransportResponseHandler;
-
-import com.google.common.collect.ImmutableList;
 
 import lombok.extern.log4j.Log4j2;
 
@@ -100,7 +99,7 @@ public class MLTrainAndPredictTaskRunner extends MLTaskRunner<MLTrainingTaskRequ
             .inputType(inputDataType)
             .functionName(request.getMlInput().getFunctionName())
             .state(MLTaskState.CREATED)
-            .workerNodes(ImmutableList.of(clusterService.localNode().getId()))
+            .workerNodes(List.of(clusterService.localNode().getId()))
             .createTime(now)
             .lastUpdateTime(now)
             .async(false)
