@@ -5,6 +5,8 @@
 
 package org.opensearch.ml.action.execute;
 
+import java.util.List;
+
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.rules.ExpectedException;
@@ -18,8 +20,6 @@ import org.opensearch.ml.common.transport.execute.MLExecuteTaskRequest;
 import org.opensearch.ml.common.transport.execute.MLExecuteTaskResponse;
 import org.opensearch.test.OpenSearchIntegTestCase;
 
-import com.google.common.collect.ImmutableList;
-
 @OpenSearchIntegTestCase.ClusterScope(scope = OpenSearchIntegTestCase.Scope.SUITE, numDataNodes = 3)
 public class ExecuteITTests extends MLCommonsIntegTestCase {
 
@@ -32,7 +32,7 @@ public class ExecuteITTests extends MLCommonsIntegTestCase {
     }
 
     public void testExecuteLocalSampleCalculator() {
-        Input input = new LocalSampleCalculatorInput("sum", ImmutableList.of(1.0, 2.0, 3.0));
+        Input input = new LocalSampleCalculatorInput("sum", List.of(1.0, 2.0, 3.0));
         MLExecuteTaskRequest request = new MLExecuteTaskRequest(FunctionName.LOCAL_SAMPLE_CALCULATOR, input);
         MLExecuteTaskResponse executeTaskResponse = client().execute(MLExecuteTaskAction.INSTANCE, request).actionGet(5000);
         LocalSampleCalculatorOutput output = (LocalSampleCalculatorOutput) executeTaskResponse.getOutput();
