@@ -75,8 +75,6 @@ import org.opensearch.test.OpenSearchTestCase;
 import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.TransportService;
 
-import com.google.common.collect.ImmutableList;
-
 public class UpdateModelTransportActionTests extends OpenSearchTestCase {
     @Mock
     ThreadPool threadPool;
@@ -151,7 +149,7 @@ public class UpdateModelTransportActionTests extends OpenSearchTestCase {
     @Mock
     MLEngine mlEngine;
 
-    private static final List<String> TRUSTED_CONNECTOR_ENDPOINTS_REGEXES = ImmutableList.of("^https://api\\.test\\.com/.*$");
+    private static final List<String> TRUSTED_CONNECTOR_ENDPOINTS_REGEXES = List.of("^https://api\\.test\\.com/.*$");
 
     @Before
     public void setup() throws IOException {
