@@ -16,6 +16,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.nio.file.Path;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
@@ -64,8 +65,6 @@ import org.opensearch.test.OpenSearchTestCase;
 import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.NodeNotConnectedException;
 import org.opensearch.transport.TransportService;
-
-import com.google.common.collect.ImmutableList;
 
 public class MLTrainingTaskRunnerTests extends OpenSearchTestCase {
     @Mock
@@ -163,7 +162,7 @@ public class MLTrainingTaskRunnerTests extends OpenSearchTestCase {
 
         SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
         searchSourceBuilder.query(new MatchAllQueryBuilder());
-        MLInputDataset queryInputDataSet = new SearchQueryInputDataset(ImmutableList.of(indexName), searchSourceBuilder);
+        MLInputDataset queryInputDataSet = new SearchQueryInputDataset(List.of(indexName), searchSourceBuilder);
         MLInput mlInputWithQuery = MLInput
             .builder()
             .algorithm(FunctionName.BATCH_RCF)
